# uv-dockerizer

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
src/uv_dockerizer/: __init__.py  cli.py  models.py
src/uv_dockerizer/analyzers/: __init__.py  project.py
src/uv_dockerizer/generators/: __init__.py  ci.py  compose.py  dockerfile.py
src/uv_dockerizer/iac/: __init__.py
src/uv_dockerizer/templates/: __init__.py
